testsuite/escript/classes/fail-baseclass-no-ctor-01.src
// A base class must define a constructor (BaseClass2 missing function)

class BaseClass1()
  function BaseClass1( this ) endfunction
endclass

class BaseClass2()
endclass

class Animal(BaseClass1, BaseClass2)
  function Animal( this ) endfunction
endclass

Animal();